Created a reciepe Fried Chicken
made a reciepe and linked the file into index page

--- a/RECIEPE/fried-chicken.html
+++ b/RECIEPE/fried-chicken.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Reciepes</title>
+    <title>Fried Chicken</title>
 </head>
 <body>
-    <h1>Odin Reciepes</h1>
-    <a href="./RECIEPE/fried-chicken.html">Fried Chicken Reciepe</a>
+    <h1>Fried Chicken</h1>
+    
 </body>
 </html>
