--- a/RECIEPE/fried-chicken.html
+++ b/RECIEPE/fried-chicken.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fried Chicken</title>
+    <title>Crispy Fried Chicken</title>
 </head>
 <body>
-    <h1>Fried Chicken</h1>
-    
+    <h1>Crispy Fried Chicken</h1>
+
 </body>
 </html>
