--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Odin Reciepes</h1>
-    <a href="./RECIEPE/fried-chicken.html">Fried Chicken Reciepe</a>
+    <a href="./RECIEPE/fried-chicken.html">Crispy Fried Chicken Reciepe</a>
 </body>
 </html>
