Added a new reciepe and modified
The new reciepe was added and the ingredients list and steps to make were updated.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Odin Reciepes</h1>
-    <a href="./RECIEPE/fried-chicken.html">Crispy Fried Chicken Reciepe</a>
+    <a href="./Crispy Fried Chicken/fried-chicken.html">Crispy Fried Chicken Reciepe</a>
 </body>
 </html>
