Added a new reciepe "Tandoori Chicken"
created a folder to contain all the neccessary files for tandoori chicken reciepe and linked it to the main index page.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Reciepes</h1>
-    <a href="./Crispy Fried Chicken/fried-chicken.html">Crispy Fried Chicken Reciepe</a>
+    <ul>
+        <li><a href="./Crispy Fried Chicken/fried-chicken.html">Crispy Fried Chicken Reciepe</a></li>
+        <li><a href="./Tandoori Chicken/tandoori-chicken.html">Tandoori Chicken Reciepe</a></li>
+    </ul>
+    
 </body>
 </html>
