Modification to tandoori reciepe
A small modification was made i.e added li links and removed p tags.

--- a/Tandoori Chicken/tandoori-chicken.html
+++ b/Tandoori Chicken/tandoori-chicken.html
@@ -17,32 +17,32 @@
     </p>
     <h2>Ingredients</h2>
     <ul>
-      <li></li>
-      <p>2 pounds chicken, cut into pieces</p>
+     
+      <li>2 pounds chicken, cut into pieces</li>
 
-      <p>1 medium lemon, juiced</p>
+      <li>1 medium lemon, juiced</li>
 
-      <p>1 teaspoon salt</p>
+      <li>1 teaspoon salt</li>
 
-      <p>1 ¼ cups plain yogurt</p>
+      <li>1 ¼ cups plain yogurt</li>
 
-      <p>½ medium onion, finely chopped</p>
+      <li>½ medium onion, finely chopped</li>
 
-      <p>1 clove garlic, minced</p>
+      <li>1 clove garlic, minced</li>
 
-      <p>2 teaspoons garam masala</p>
+      <li>2 teaspoons garam masala</li>
 
-      <p>1 teaspoon grated fresh ginger root</p>
+      <li>1 teaspoon grated fresh ginger root</li>
 
-      <p>1 teaspoon cayenne pepper</p>
+      <li>1 teaspoon cayenne pepper</li>
 
-      <p>1 teaspoon red food coloring (Optional)</p>
+      <li>1 teaspoon red food coloring (Optional)</li>
 
-      <p>1 teaspoon yellow food coloring (Optional)</p>
+      <li>1 teaspoon yellow food coloring (Optional)</li>
 
-      <p>2 teaspoons finely chopped cilantro</p>
+      <li>2 teaspoons finely chopped cilantro</li>
 
-      <p>1 medium lemon, cut into wedges</p>
+      <li>1 medium lemon, cut into wedges</li>
     </ul>
     <h2>Steps</h2>
     <ol>
