Added New Reciepe SimpleWholeRoastedChicken
Created The Reciepe and added description,ingredients and steps to make the reciepe. Later linked the reciepe page to main index page and did all the modifications.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="./Crispy Fried Chicken/fried-chicken.html">Crispy Fried Chicken Reciepe</a></li>
         <li><a href="./Tandoori Chicken/tandoori-chicken.html">Tandoori Chicken Reciepe</a></li>
+        <li><a href="./Simple Whole Roasted Chicken/SimpleWholeRoastedChicken.html">Simple Whole Roasted Chicken</a></li>
     </ul>
     
 </body>
